--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,10 @@ jobs:
           repository: AndreivanP/BE_PatrimonyManagement
           token: ${{ secrets.gha_pta || github.token }}
        - name: Generate jar artifact
-         run: cd BE_PatrimonyManagement && mvn install -DskipTests
+         run: |
+          pwd
+          ls -ll -a
+          cd BE_PatrimonyManagement && mvn install -DskipTests
        - name: Build docker image
          run: cd BE_PatrimonyManagement && docker-compose -f docker-compose-be.yml build
        - name: Deploy docker containers for API and Database
