--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,6 @@ jobs:
           ls -ll -a
           mvn install -DskipTests
        - name: Build docker image
-         run: cd BE_PatrimonyManagement && docker-compose -f docker-compose-be.yml build
+         run: docker-compose -f docker-compose-be.yml build
        - name: Deploy docker containers for API and Database
-         run: cd BE_PatrimonyManagement && docker-compose -f docker-compose-be.yml up -d
+         run: docker-compose -f docker-compose-be.yml up -d
