--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     steps:
        - uses: actions/checkout@v2
          with:
-          ref: ${{ github.event.pull_request.head.sha }}
+          ref: gha-test #${{ github.event.pull_request.head.sha }}
        - name: Build docker image
          run: |
           pwd
