--- a/docker-compose-fe.yml
+++ b/docker-compose-fe.yml
@@ -9,4 +9,14 @@ services:
       dockerfile: Dockerfile
     ports:
       - 4200:4200
+    stdin_open: true
+
+  e2e-runner:
+    image: cypresstests
+    container_name: e2e-cypress-runner
+    build:
+      context: .
+      dockerfile: e2e/Dockerfile
+    ports:
+      - "8081:8081"
     stdin_open: true  
