--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build-be:
+  build-deploy-run-e2e:
     runs-on: ubuntu-latest
     steps:
        - name: Clone BE repo
@@ -21,10 +21,6 @@ jobs:
          run: docker-compose -f docker-compose-be.yml build
        - name: Create docker containers for API and Database
          run: docker-compose -f docker-compose-be.yml up -d
-
-  build-fe-e2e:
-    runs-on: ubuntu-latest
-    steps:
        - uses: actions/checkout@v2
          with:
           ref: e2e-cypress #${{ github.event.pull_request.head.sha }}
@@ -34,5 +30,4 @@ jobs:
          run: docker-compose -f docker-compose-fe.yml up -d
        - name: Run e2e tests within cypress container
          run: docker-compose -f docker-compose-fe.yml exec -T e2e-runner npm run cy:regression
-         
-
+     
