--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -47,6 +47,7 @@ jobs:
             node-version: ${{ matrix.node-version }}
         - name: Yarn Install
           run: |
+            cd src && sed -i 's/asset-management/ec2-54-85-159-102.compute-1.amazonaws.com/g' Properties.js
             yarn install
         - name: Production Build
           run: |
