--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -48,6 +48,7 @@ jobs:
         - name: Yarn Install
           run: |
             cd src && sed -i 's/asset-management/ec2-54-85-159-102.compute-1.amazonaws.com/g' Properties.js
+            sed -i -e "s/buildplaceholder/$(date'')/g" Properties.js
             yarn install
         - name: Production Build
           run: |
