--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,4 +29,6 @@ jobs:
        - name: Create docker containers for FE app and Cypress runner
          run: docker-compose -f docker-compose-fe.yml up -d
        - name: Run e2e tests within cypress container
-         run: docker-compose -f docker-compose-fe.yml exec -T e2e-runner npm run cy:regression
+         run: |
+          docker ps
+          docker-compose -f docker-compose-fe.yml exec -T e2e-runner npm run cy:regression
