--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,3 +32,5 @@ jobs:
          run: |
           docker ps
           docker-compose -f docker-compose-fe.yml exec -T e2e-runner npm run cy:regression
+          docker ps
+          docker logs fe-asset-management
