--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,10 @@ jobs:
        - name: Create docker containers for FE app and Cypress runner
          run: docker-compose -f docker-compose-fe.yml up -d
        - name: Run e2e tests within cypress container
-         run: |
-          docker ps
-          docker-compose -f docker-compose-fe.yml exec -T e2e-runner npm run cy:regression
-          docker ps
-          docker logs fe-asset-management
+       - name: Sleep for 30 seconds
+         uses: jakejarvis/wait-action@master
+         with:
+          time: '45s'
+          run: |
+            docker ps
+            docker logs fe-asset-management
