--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-scripts": "3.4.0"
   },
   "scripts": {
-    "start": "PORT=4200 react-scripts start",
+    "start": "PORT=4200 react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
