--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,5 @@ jobs:
           docker-compose -f docker-compose-fe.yml build
        - name: Create docker containers for FE app and Cypress runner
          run: docker-compose -f docker-compose-fe.yml up -d
-       - name: Sleep for 30 seconds
-         uses: jakejarvis/wait-action@master
-         with:
-          time: '45s'
        - name: Run e2e tests within cypress container
-         run: |
-            docker ps
-            docker logs fe-asset-management
+         run: docker-compose -f docker-compose-fe.yml exec -T e2e-runner npm run cy:regression
