--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.2",
     "bootstrap": "^4.3.1",
+    "chart.js": "^3.6.0",
     "formik": "^2.1.7",
     "moment": "^2.29.1",
     "react": "^16.13.1",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.1",
-    "react-router": "^5.2.1",
     "react-scripts": "3.4.0"
   },
   "scripts": {
