--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^16.13.1",
+    "react-loader-spinner": "^4.0.0",
     "react-router": "^5.2.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.1",
