--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,11 +1,42 @@
-name: CD workflow
+name: React UI on AWS S3 Bucket
 
 on:
   push:
     branches: [ master ]
-
+    
 jobs:
-  deploy-in-production:
+  staging:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x]
+    steps:
+        - uses: actions/checkout@v1
+        - name: Use Node.js ${{ matrix.node-version }}
+          uses: actions/setup-node@v1
+          with:
+            node-version: ${{ matrix.node-version }}
+        - name: Yarn Install
+          run: |
+            cd src && sed -i 's/asset-management:8080/assetmanagmentapp-stg-env.eba-bdwrizaz.us-east-1.elasticbeanstalk.com/g' Properties.js
+            sed -i -e "s/buildplaceholder/$(date'')/g" Properties.js
+            yarn install
+        - name: Staging Build
+          run: |
+            yarn build
+        - name: Deploy to S3
+          uses: jakejarvis/s3-sync-action@master
+          with:
+            args: --acl public-read --delete
+          env:
+            AWS_S3_BUCKET: ${{ secrets.AWS_STAGING_BUCKET_NAME }}
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_REGION: ${{ secrets.AWS_REGION }}
+            SOURCE_DIR: "build"
+
+  production:
+    needs: staging
     runs-on: ubuntu-latest
     strategy:
       matrix:
