--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -2,7 +2,7 @@ name: React UI on AWS S3 Bucket
 
 on:
   push:
-    branches: [ master ]
+    branches: [ disabled ]
     
 jobs:
   deploy-staging:
