--- a/.github/workflows/cd-heroku.yml
+++ b/.github/workflows/cd-heroku.yml
@@ -15,7 +15,7 @@ jobs:
             node-version: ${{ matrix.node-version }}
         - name: Setup API STG Url
           run: |
-            cd src && sed -i 's/asset-management:8080/api-asset-management-stg.herokuapp.com/g' Properties.js
+            cd src && sed -i 's#http://asset-management:8080#https://api-asset-management-stg.herokuapp.com#g' Properties.js
             sed -i -e "s/buildplaceholder/$(date'')/g" Properties.js
         - name: Deploy to Heroku Staging Environment
           uses: AkhileshNS/heroku-deploy@v3.8.8
@@ -48,7 +48,7 @@ jobs:
             node-version: ${{ matrix.node-version }}
         - name: Setup API STG Url
           run: |
-            cd src && sed -i 's/asset-management:8080/api-asset-management.herokuapp.com/g' Properties.js
+            cd src && sed -i 's#http://asset-management:8080#https://api-asset-management.herokuapp.com#g' Properties.js
             sed -i -e "s/buildplaceholder/$(date'')/g" Properties.js
         - name: Deploy to Heroku Production Environment
           uses: AkhileshNS/heroku-deploy@v3.8.8
