--- a/docker-compose-fe.yml
+++ b/docker-compose-fe.yml
@@ -18,6 +18,8 @@ services:
     build:
       context: .
       dockerfile: e2e/Dockerfile
+    environment:
+      - GITHUB_RUN_NUMBER=${GITHUB_RUN_NUMBER}
     ports:
       - "8081:8081"
     stdin_open: true  
