--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,10 @@ jobs:
        - name: Create docker containers for FE app and Cypress runner
          run: docker-compose -f docker-compose-fe.yml up -d
        - name: Run e2e tests within cypress container
-         run: docker-compose -f docker-compose-fe.yml exec -T e2e-runner npm run cy:regression
+        #  run: docker-compose -f docker-compose-fe.yml exec -T e2e-runner npm run cy:regression
+         uses: cypress-io/github-action@v2
+         with:
+          record: true
+          parallel: true
+          group: 'Actions example'
+          command: docker-compose -f docker-compose-fe.yml exec -T e2e-runner npm run cy:regression
