--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,12 +26,16 @@ jobs:
        - uses: actions/checkout@v2
          with:
           ref: ${{ github.event.pull_request.head.sha }}
-       - name: Build front end related docker images
+       - name: Build front end docker images
          run: |
-          git status
           docker-compose -f docker-compose-fe.yml build
+        - name: Create docker containers for front end
+         run: |
+          docker-compose -f docker-compose-fe.yml up -d
        - name: Create docker containers for FE app and Cypress runner
-         run: docker-compose -f docker-compose-fe.yml up -d
+         run: |
+          docker-compose -f docker-compose-e2e.yml build
+          docker-compose -f docker-compose-e2e.yml up -d
        - name: Run e2e tests within cypress container
         #  run: docker-compose -f docker-compose-fe.yml exec -T e2e-runner npm run cy:regression
         uses: cypress-io/github-action@v2
@@ -40,4 +44,4 @@ jobs:
           parallel: true
           group: 'Actions example'
           working-directory: e2e
-          command: docker-compose -f docker-compose-fe.yml exec -T e2e-runner npm run cy:regression
+          command: docker-compose -f docker-compose-e2e.yml exec -T e2e-runner npm run cy:regression
