--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,16 +26,12 @@ jobs:
        - uses: actions/checkout@v2
          with:
           ref: ${{ github.event.pull_request.head.sha }}
-       - name: Build front end docker images
+       - name: Build front end app and Cypress docker images
          run: |
           docker-compose -f docker-compose-fe.yml build
-       - name: Create docker containers for front end
+       - name: Create docker containers for front end and Cypress
          run: |
           docker-compose -f docker-compose-fe.yml up -d
-       - name: Create docker containers for FE app and Cypress runner
-         run: |
-          cd e2e && docker-compose -f docker-compose-e2e.yml build
-          docker-compose -f docker-compose-e2e.yml up -d
        - name: Run e2e tests within cypress container
         #  run: docker-compose -f docker-compose-fe.yml exec -T e2e-runner npm run cy:regression
          uses: cypress-io/github-action@v2
