--- a/e2e/docker-compose-e2e.yml
+++ b/e2e/docker-compose-e2e.yml
@@ -1,14 +1,23 @@
 version: "3.1"
 
 services:
+  APPUI:
+    container_name: fe-asset-management
+    image: react-asset-management
+    build:
+      context: ..
+      dockerfile: Dockerfile
+    ports:
+      - 4200:4200
+    stdin_open: true
+    tty: true
+
   e2e-runner:
     image: cypresstests
     container_name: e2e-cypress-runner
     build:
       context: .
       dockerfile: Dockerfile
-    environment:
-      - GITHUB_RUN_NUMBER=${GITHUB_RUN_NUMBER}
     ports:
       - "8081:8081"
     stdin_open: true  
