--- a/e2e/docker-compose-e2e.yml
+++ b/e2e/docker-compose-e2e.yml
@@ -18,6 +18,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    environment:
+      - GITHUB_RUN_NUMBER=${GITHUB_RUN_NUMBER}
     ports:
       - "8081:8081"
     stdin_open: true  
