--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
        - name: Build front end app and Cypress docker images
          run: |
           cd e2e && docker-compose -f docker-compose-e2e.yml build
-       - name: Create docker containers for front end and Cypress
+       - name: Create docker containers for front end and Cypress Runner
          run: |
           cd e2e && docker-compose -f docker-compose-e2e.yml up -d
        - name: Run e2e tests within cypress container
