Add replacement url for db stg

--- a/.github/workflows/cd-heroku.yml
+++ b/.github/workflows/cd-heroku.yml
@@ -16,6 +16,7 @@ jobs:
         - name: Setup API STG Url
           run: |
             cd src && sed -i 's#http://asset-management:8080#https://api-asset-management-stg.herokuapp.com#g' Properties.js
+            cd src && sed -i 's#mongodb://mongodb:27017/pat_manag#${{secrets.STG_DB_URL}}#g' Properties.js
             sed -i -e "s/buildplaceholder/$(date'')/g" Properties.js
         - name: Deploy to Heroku Staging Environment
           uses: AkhileshNS/heroku-deploy@v3.8.8
