--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@faker-js/faker": "^6.0.0-beta.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -11,17 +16,17 @@
     "chart.js": "^3.6.0",
     "formik": "^2.1.7",
     "moment": "^2.29.1",
-    "react": "^16.13.1",
+    "react": "17.0.0",
     "react-chartjs-2": "^3.3.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "17.0.0",
     "react-loader-spinner": "^4.0.0",
     "react-router": "^5.2.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "3.4.0"
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
-    "start": "PORT=4200 react-scripts --openssl-legacy-provider start",
+    "start": "PORT=4200 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
