--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@faker-js/faker": "^6.0.0-beta.0",
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.5.1",
+    "@mui/styles": "^5.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
