--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.8.1",
     "@faker-js/faker": "^6.0.0-beta.0",
     "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
     "@mui/styles": "^5.5.1",
     "@testing-library/jest-dom": "^4.2.4",
