--- a/.github/workflows/cd-heroku.yml
+++ b/.github/workflows/cd-heroku.yml
@@ -49,7 +49,7 @@ jobs:
             node-version: ${{ matrix.node-version }}
         - name: Setup API STG Url
           run: |
-            cd src && sed -i 's#http://asset-management:8080#https://api-asset-management.herokuapp.com#g' Properties.js
+            cd src && sed -i 's#http://asset-management:8080#https://invest-compass-be-8797d9c47b40.herokuapp.com#g' Properties.js
             sed -i -e "s/buildplaceholder/$(date'')/g" Properties.js
         - name: Deploy to Heroku Production Environment
           uses: AkhileshNS/heroku-deploy@v3.12.12
