--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.21.2",
-    "bootstrap": "^4.3.1",
+    "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "chart.js": "^3.6.0",
     "formik": "^2.1.7",
     "moment": "^2.29.1",
@@ -25,7 +25,7 @@
     "react-router": "^5.2.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "PORT=4200 react-scripts --openssl-legacy-provider start",
@@ -47,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.37.1"
   }
 }
