--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "start": "PORT=4200 react-scripts --openssl-legacy-provider start",
-    "build":  "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+    "build":  "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
